feat(#2) :: 투표보기 + 퍼센트